<?xml version="1.0"?>
<package>
  <name>cartesian</name>
  <version>0.0.0</version>
  <description></description>

  <maintainer email="k.borodina@innopolis.ru">Kamilla Borodina</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>

  <export>
  </export>
</package>
